Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
5.0.0
-
ubuntu 18.04 LTS
Description
Reading parquet files using dataset scanner may stall due to a never-finished future.
To reproduce this case, one needs two parquet files and sets the filter expression to something that could filter one file completely. After that, calling `AsyncScanner::ToRecordBatchReader` and read data continually.
I also have dug this bug a little. It's caused by the `MakeEmptyGenerator<std::shared_ptr<RecordBatch>>` when filtered row groups is empty, which's ignored by `FragmentToBatches` and causes SequencingGenerator to stall.
A quick fix is to return a record batch with 0 rows instead of returning a nullptr there.
Attachments
Attachments
Issue Links
- links to