ARROW-13982: [C++] Don't hang if a fragment is filtered out